5 Term Data Bases coursework done 25% ?????

--- a/5 Term/Data Bases coursework/src/requests/templates/request_1.html
+++ b/5 Term/Data Bases coursework/src/requests/templates/request_1.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-<title>Запрос 1</title>
+<title>Запрос 1.</title>
 <meta charset="UTF-8">
 </head>
 
 <body>
-<h1>Название</h1>
+<h1>Вывести заказчиков по году и месяцу заключения договора</h1>
 <form method="post">
 <input type="number" name="year" class="center" min=2000 max=2021 autofocus placeholder="Year" required>
 <input type="number" name="month" class="center" min=0 max=12 placeholder="Month" required>
