--- a/5 Term/Data Bases coursework/src/requests/templates/request_4.html
+++ b/5 Term/Data Bases coursework/src/requests/templates/request_4.html
@@ -2,12 +2,12 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-		<title>Запрос 2. Заказы за последний N дней</title>
+		<title>Запрос 4.</title>
   		<meta charset="UTF-8">
 	</head>
 
 	<body>
-		<h1>Введите за сколько дней нужны заказы</h1>
+		<h1>Номер похожий на ...</h1>
 		<form method="post" class="form_request1">
 			<input  type="number" name="telephoneLike" min=0 autofocus placeholder="0123456789" required>
       			<button type="submit" class="inline_button">Поиск</button>
