--- a/5 Term/Data Bases coursework/src/requests/templates/request_5.html
+++ b/5 Term/Data Bases coursework/src/requests/templates/request_5.html
@@ -2,14 +2,14 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-		<title>Запрос 2. Заказы за последний N дней</title>
+		<title>Запрос 5.</title>
   		<meta charset="UTF-8">
 	</head>
 
 	<body>
-		<h1>Введите за сколько дней нужны заказы</h1>
+		<h1>Общая стоимость заказов со статусом N по заказчикам</h1>
 		<form method="post" class="form_request1">
-			<input  type="number" name="telephoneLike" min=0 autofocus placeholder="0123456789" required>
+			<input  type="number" name="numberParam" min=0 autofocus placeholder="0123456789" required>
       			<button type="submit" class="inline_button">Поиск</button>
 		</form>
 		<form action="{{ url_for('requests.requests_index') }}">
