--- a/5 Term/Data Bases coursework/src/requests/templates/request_6.html
+++ b/5 Term/Data Bases coursework/src/requests/templates/request_6.html
@@ -2,15 +2,15 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-		<title>Работа с отчётами</title>
+		<title>Запрос 6.</title>
   		<meta charset="UTF-8">
 	</head>
 
 	<body>
 		<h1>Извините, но данная страница пока не доступна :(</h1>
 		<h2>Пожалуйста, зайдите позже.</h2>
-		<form action="{{ url_for('index') }}">
-      			<button type="submit" class="small_button">Вернуться</button>
-    		</form>
+<form action="{{ url_for('requests.requests_index') }}">
+<button type="submit" class="small_button">Вернуться</button>
+</form>
 	</body>
 </html>
