--- a/5 Term/Data Bases coursework/src/requests/templates/request_result_child.html
+++ b/5 Term/Data Bases coursework/src/requests/templates/request_result_child.html
@@ -1,7 +1,6 @@
 {% extends 'request_result_main.html' %}{% block child %}<div class="table"><table>
-<thead><tr><th>idTest</th><th>Name</th><th>AverageTime</th></tr></thead>
+<thead><tr><th>idCustomer</th><th>OrderSum</th></tr></thead>
 <tbody>
-<tr><td>2</td><td>Quick dive test</td><td>60</td></tr>
-<tr><td>3</td><td>Long dive test</td><td>120</td></tr>
+<tr><td>3</td><td>500</td></tr>
 </tbody>
 </table></div>{% endblock %}
