--- a/5 Term/Data Bases coursework/src/static/css/styles.css
+++ b/5 Term/Data Bases coursework/src/static/css/styles.css
@@ -28,7 +28,12 @@ input {
         margin:auto;
 }
 table {
-text-align:center; border-style:solid; border-color:black;
+border-collapse:collapse; border:none;
+text-align:center;
+margin:0 auto;
+}
+th, td {
+border: 1px solid black;
 }
 .center {
 margin:auto; display:block; margin-block:20px;
