5 Term Data Bases coursework update after 25%

--- a/5 Term/Data Bases coursework/src/requests/templates/request_1.html
+++ b/5 Term/Data Bases coursework/src/requests/templates/request_1.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<h1>Вывести заказчиков по году и месяцу заключения договора</h1>
+<h1>Заказчики заключившие договор в N году</h1>
 <form method="post">
 <input type="number" name="year" class="center" min=2000 max=2021 autofocus placeholder="Year" required>
 <input type="number" name="month" class="center" min=0 max=12 placeholder="Month" required>
