--- a/5 Term/Data Bases coursework/src/requests/templates/request_result_child.html
+++ b/5 Term/Data Bases coursework/src/requests/templates/request_result_child.html
@@ -1,6 +1,1 @@
-{% extends 'request_result_main.html' %}{% block child %}<div class="table"><table>
-<thead><tr><th>idCustomer</th><th>OrderSum</th></tr></thead>
-<tbody>
-<tr><td>3</td><td>500</td></tr>
-</tbody>
-</table></div>{% endblock %}
+{% extends 'request_result_main.html' %}{% block child %}<div><p>No Items</p></div>{% endblock %}
