--- a/5 Term/Data Bases coursework/src/requests/templates/request_5.html
+++ b/5 Term/Data Bases coursework/src/requests/templates/request_5.html
@@ -9,7 +9,7 @@
 	<body>
 		<h1>Общая стоимость заказов со статусом N по заказчикам</h1>
 		<form method="post" class="form_request1">
-			<input  type="number" name="numberParam" min=0 autofocus placeholder="0123456789" required>
+			<input  type="number" name="numberParam" min=0 max=3 autofocus placeholder="012" required>
       			<button type="submit" class="inline_button">Поиск</button>
 		</form>
 		<form action="{{ url_for('requests.requests_index') }}">
