--- a/5 Term/Data Bases coursework/src/requests/templates/request_6.html
+++ b/5 Term/Data Bases coursework/src/requests/templates/request_6.html
@@ -7,10 +7,14 @@
 	</head>
 
 	<body>
-		<h1>Извините, но данная страница пока не доступна :(</h1>
-		<h2>Пожалуйста, зайдите позже.</h2>
-<form action="{{ url_for('requests.requests_index') }}">
-<button type="submit" class="small_button">Вернуться</button>
-</form>
+		<h1>Максимальный заказ со статусом N в году M по заказчикам</h1>
+		<form method="post" class="form_request1">
+            <input type="number" name="year" class="center" min=2000 max=2021 autofocus placeholder="Year" required>
+            <input  type="number" name="orderStatus" min=0 max=2 autofocus placeholder="012" required>
+      			<button type="submit" class="inline_button">Поиск</button>
+		</form>
+		<form action="{{ url_for('requests.requests_index') }}">
+      			<button type="submit" class="small_button">Вернуться</button>
+    		</form>
 	</body>
 </html>
