--- a/5 Term/Data Bases coursework/src/requests/templates/request_idCustomer_child.html
+++ b/5 Term/Data Bases coursework/src/requests/templates/request_idCustomer_child.html
@@ -1,1 +1,1 @@
-{% extends 'request_idCustomer_base.html' %}{% block child %}<div class="article_3"><select name="customerName"><option>Стас</option><option>Даниель</option><option>Кристина</option></select></div>{% endblock %}
+{% extends 'request_idCustomer_base.html' %}{% block child %}<div><select name="customerName"><option>Стас</option><option>Даниель</option><option>Кристина</option></select></div>{% endblock %}
