--- a/5 Term/Data Bases coursework/src/templates/index.html
+++ b/5 Term/Data Bases coursework/src/templates/index.html
@@ -17,6 +17,10 @@
 			<a href="{{ url_for('requests.requests_index') }}">Работать с запросами</a>
 		</div>
 
+        <div class="div_like_button_1">
+			<a href="{{ url_for('edit.edit_index') }}">Редактировать</a>
+		</div>
+
 		{% if name == 'Посетитель' %}
 		    <div class="div_like_button_1">
 			    <a href="{{ url_for('auth.auth_index') }}">Авторизоваться</a>
