--- a/5 Term/Data Bases coursework/src/edit/templates/edit_users_base.html
+++ b/5 Term/Data Bases coursework/src/edit/templates/edit_users_base.html
@@ -13,6 +13,9 @@
 
 		{% block child %}{% endblock %}
 
+        <div class="div_like_button_2">
+			<a href="{{ url_for('edit.edit_insert_user') }}">Добавить пользователя</a>
+		</div>
 
 		<div class="div_like_button_1">
 			<a href="{{ url_for('edit.edit_index') }}" class="a_yellow">Вернуться к выбору</a>
