--- a/5 Term/Data Bases coursework/src/edit/templates/edit_base.html
+++ b/5 Term/Data Bases coursework/src/edit/templates/edit_base.html
@@ -8,17 +8,26 @@
 
 	<body>
 		<div class="div_like_belt_1">
-			<p class="article_1">Все пользователи</p>
+			<p class="article_1">{{ title }}</p>
 		</div>
 
 		{% block child %}{% endblock %}
 
         <div class="div_like_button_2">
-			<a href="{{ url_for('edit.edit_insert_user') }}">Добавить пользователя</a>
+			<a href="{{ url_for_insert }}">{{ insertWhat }}</a>
 		</div>
 
 		<div class="div_like_button_1">
 			<a href="{{ url_for('edit.edit_index') }}" class="a_yellow">Вернуться к выбору</a>
 		</div>
+    <script type="text/javascript">
+    var elems = document.getElementsByClassName('confirmable');
+    var confirmIt = function (e) {
+        if (!confirm('Точно удалить?')) e.preventDefault();
+    };
+    for (var i = 0, l = elems.length; i < l; i++) {
+        elems[i].addEventListener('click', confirmIt, false);
+    }
+    </script>
 	</body>
 </html>
