--- a/5 Term/Data Bases coursework/src/edit/templates/edit_index.html
+++ b/5 Term/Data Bases coursework/src/edit/templates/edit_index.html
@@ -18,6 +18,9 @@
 
         <!--Worker-->
 
+        <div class="div_like_button_2">
+			<a href="{{ url_for('edit.edit_products') }}">W: Все продукты</a>
+		</div>
 
         <div class="div_like_button_2">
 			<a href="{{ url_for('index') }}" class="a_yellow">Вернуться</a>
