--- a/5 Term/Data Bases coursework/src/edit/templates/edit_result_user.html
+++ b/5 Term/Data Bases coursework/src/edit/templates/edit_result_user.html
@@ -18,6 +18,9 @@
             window.location.href = "../users";
             }, 3000);
         </script>
+        <div class="div_like_button_1">
+			<a href="{{ url_for('edit.edit_users') }}" class="a_yellow">Вернуться</a>
+		</div>
 
 	</body>
 </html>
