--- a/5 Term/Data Bases coursework/src/static/css/styles.css
+++ b/5 Term/Data Bases coursework/src/static/css/styles.css
@@ -1,6 +1,6 @@
 body {
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
 }
 
 a {
@@ -53,55 +53,25 @@ a:hover {
 
 a.a_yellow {
     background-color: #957925;
-    font-size: 30px;
-    text-align: center;
-    text-decoration: none;
-    color: #FFFFFF;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    font-family: Arial;
-    display: block;
 }
 
 a.a_yellow:active {
     background-color: #957925;
-    font-size: 30px;
-    text-align: center;
-    text-decoration: none;
-    color: white;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    font-family: Arial;
-    display: block;
 }
 
 a.a_yellow:visited {
     background-color: #957925;
-    font-size: 30px;
-    text-align: center;
-    text-decoration: none;
-    color: white;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    font-family: Arial;
-    display: block;
 }
 
 a.a_yellow:hover {
     background-color: #C79500;
-    font-size: 30px;
-    text-align: center;
-    text-decoration: none;
-    color: white;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    font-family: Arial;
-    display: block;
 }
 
 img {
     width: 100%;
     max-width: 600px;
+    margin: auto;
+    display: block;
 }
 
 input[type="text"], input[type="password"], input[type="number"], input[type="date"] {
@@ -115,6 +85,15 @@ input[type="text"], input[type="password"], input[type="number"], input[type="da
     margin-bottom: 10px;
     margin-left: auto;
     margin-right: auto;
+}
+
+input.simple[type="text"], input.simple[type="password"], input.simple[type="number"], input.simple[type="date"] {
+    width: 150px;
+    height: auto;
+    font-size: 24px;
+    border-radius: 0;
+    padding: 0;
+    margin-bottom: 0;
 }
 
 button {
@@ -137,20 +116,34 @@ button {
 
 button:hover {
     background-color: #5959C5;
-    border: none;
-    color: white;
-    width: 500px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    text-align: center;
-    font-family: Arial;
-    text-decoration: none;
-    display: block;
-    font-size: 30px;
-    cursor: pointer;
-    margin-left: auto;
-    margin-right: auto;
+}
+
+button.clear {
+    background-color: #FFFFFF;
+    color: black;
+    width: auto;
+    padding-top: initial;
+    padding-bottom: initial;
+    font-size: 24px;
+    margin-bottom: auto;
+    font-weight: bold;
+}
+
+button.clear:hover {
+    background-color: #FFFFFF;
+}
+
+button.cell {
+    width: 450px;
+    border-style: solid;
+    border-color: black;
     margin-bottom: 10px;
+    padding-bottom: 0;
+}
+
+button.small {
+    width: 210px;
+    font-size: 30px;
 }
 
 table {
@@ -180,7 +173,7 @@ th, td {
 
 .div_like_belt_1 {
     height: 120px;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
 }
 
 .article_1 {
@@ -211,14 +204,70 @@ th, td {
     margin-bottom: 50px;
 }
 
-.img_center {
-    margin: auto;
+.article_4 {
+    font-size: 24px;
+    text-align: center;
+    color: #3131C5;
+    font-family: Arial;
+}
+
+.article_5 {
+    font-size: 24px;
+    text-align: left;
+    color: black;
+    font-family: Arial;
+    margin-bottom: 0;
+}
+
+.article_succeed {
+    background-color: darkgreen;
+    font-size: 40px;
+    text-align: center;
+    color: #FFFFFF;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    font-family: Arial;
     display: block;
+    margin-block: 0px;
+}
+
+.article_decline {
+    background-color: darkred;
+    font-size: 40px;
+    text-align: center;
+    color: #FFFFFF;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    font-family: Arial;
+    display: block;
+    margin-block: 0px;
+}
+
+.paragraph {
+    display: inline-block;
+    width: 45%;
+    margin-right: 2.5%;
+    margin-left: 2.5%;
+}
+
+.right {
+    float: right;
+}
+
+.left {
+    float: left;
 }
 
 select {
-	background-color:#0000B8; font-size:30px; text-align:center;
-    color:#FFFFFF; padding-top: 20px;
-    padding-bottom: 20px; font-family:Arial; display: block;
-	width: 500px; height:90px; margin:auto;
+    background-color: #0000B8;
+    font-size: 30px;
+    text-align: center;
+    color: #FFFFFF;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    font-family: Arial;
+    display: block;
+    width: 500px;
+    height: 90px;
+    margin: auto;
 }
