--- a/5 Term/Data Bases coursework/src/templates/index.html
+++ b/5 Term/Data Bases coursework/src/templates/index.html
@@ -1,38 +1,36 @@
 <!doctype html>
 <html>
-	<head>
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-		<title>Главное меню</title>
-  		<meta charset="UTF-8">
-	</head>
+<head>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    <title>Главное меню</title>
+    <meta charset="UTF-8">
+</head>
 
-	<body>
-		<div class="div_like_belt_1">
-			<p class="article_1">Главное меню</p>
-		</div>
+<body>
+<div class="div_like_belt_1">
+    <p class="article_1">Главное меню</p>
+</div>
 
-		<p class="article_2">Вы авторизованы как {{name}}</p>
+<p class="article_2">Вы авторизованы как {{name}}</p>
 
-		<div class="div_like_button_1">
-			<a href="{{ url_for('requests.requests_index') }}">Работать с запросами</a>
-		</div>
 
-        <div class="div_like_button_1">
-			<a href="{{ url_for('edit.edit_index') }}">Редактировать</a>
-		</div>
-
-		{% if name == 'Посетитель' %}
-		    <div class="div_like_button_1">
-			    <a href="{{ url_for('auth.auth_index') }}">Авторизоваться</a>
-		    </div>
-		{% else %}
-		    <div class="div_like_button_1">
-			    <a href="{{ url_for('auth.auth_unauth') }}">Деавторизоваться</a>
-		    </div>
-		{% endif %}
-
-		<div class="div_like_button_1">
-			<a href="{{ url_for('exit') }}" class="a_yellow">Выйти</a>
-		</div>
-	</body>
+{% if name == 'Посетитель' %}
+<div class="div_like_button_1">
+    <a href="{{ url_for('auth.authIndex') }}">Авторизоваться</a>
+</div>
+{% else %}
+<div class="div_like_button_1">
+    <a href="{{ url_for('requests.requestsIndex') }}">Работа с запросами</a>
+</div>
+<div class="div_like_button_1">
+    <a href="{{ url_for('edit.editIndex') }}">Работа с редактированием</a>
+</div>
+<div class="div_like_button_1">
+    <a href="{{ url_for('auth.authDeauthorize') }}">Деавторизоваться</a>
+</div>
+{% endif %}
+<div class="div_like_button_1">
+    <a href="{{ url_for('Exit') }}" class="a_yellow">Выйти</a>
+</div>
+</body>
 </html>
