--- a/5 Term/Data Bases coursework/src/templates/index.html
+++ b/5 Term/Data Bases coursework/src/templates/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet">
     <title>Главное меню</title>
     <meta charset="UTF-8">
 </head>
@@ -12,7 +12,6 @@
 </div>
 
 <p class="article_2">Вы авторизованы как {{name}}</p>
-
 
 {% if name == 'Посетитель' %}
 <div class="div_like_button_1">
@@ -26,11 +25,14 @@
     <a href="{{ url_for('edit.editIndex') }}">Работа с редактированием</a>
 </div>
 <div class="div_like_button_1">
+    <a href="{{ url_for('basket.basketIndex') }}">Работа с корзиной</a>
+</div>
+<div class="div_like_button_1">
     <a href="{{ url_for('auth.authDeauthorize') }}">Деавторизоваться</a>
 </div>
 {% endif %}
 <div class="div_like_button_1">
-    <a href="{{ url_for('Exit') }}" class="a_yellow">Выйти</a>
+    <a class="a_yellow" href="{{ url_for('Exit') }}">Выйти</a>
 </div>
 </body>
 </html>
