5 Term Data Bases coursework not 100% but 80%

--- a/5 Term/Data Bases coursework/src/templates/index.html
+++ b/5 Term/Data Bases coursework/src/templates/index.html
@@ -11,7 +11,9 @@
     <p class="article_1">Главное меню</p>
 </div>
 
+{% if name != 'Посетитель' %}
 <p class="article_2">Вы авторизованы как {{name}}</p>
+{% endif %}
 
 {% if name == 'Посетитель' %}
 <div class="div_like_button_1">
