--- a/5 Term/Data Bases coursework/src/basket/templates/basketIndex.html
+++ b/5 Term/Data Bases coursework/src/basket/templates/basketIndex.html
@@ -1,91 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
-          integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet">
-    <script crossorigin="anonymous"
-            integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Сделать заказ</title>
+    <title>Выбор заказчика</title>
+    <meta charset="UTF-8">
 </head>
+
 <body>
-{% import 'basket_utils.html' as utils %}
-
-
-{% if cleared_basket != -1 %}
 <div class="div_like_belt_1">
-    <p class="article_decline">Корзина очищена</p>
+    <p class="article_1">Выберите заказчика</p>
 </div>
-{% elif bought != -1 %}
-<div class="div_like_belt_1">
-    <p class="article_succeed">Покупка оформлена</p>
-</div>
-{% else %}
-<div class="div_like_belt_1">
-    <p class="article_1">Сделайте заказ</p>
-</div>
-{% endif %}
 
-
-<div class="container">
-    <div class="row">
-        <!--Buy-->
-        <div class="col">
-            <p class="article_2">Доступные товары</p>
-            {% if products %}
-            {% for product in products %}
-                {{ utils.render_item(product, basket=basket, isNotBought=True) }}
+<form method="post">
+    <input name="buy" type="hidden" value=0>
+    <div class="article_5">
+        <select name="customerId" required>
+            {% for customer in customerNames %}
+            <option value="{{ customer['idCustomer'] }}">{{ customer['Name'] }}</option>
             {% endfor %}
-            {% else %}
-            <p class="article_2">Нет доступных товаров</p>
-            {% endif %}
-        </div>
-        <!--Basket-->
-        <div class="col">
-            <p class="article_2">Ваша корзина</p>
-            {% if basket %}
-            {% for product in basket %}
-                {{ utils.render_item(product, allProducts=allProducts, isNotBought=False) }}
-            {% endfor %}
-            {% else %}
-            <p class="article_2">Ваша корзина пуста</p>
-            {% endif %}
-        </div>
-        <!--Utils-->
-        <div class="col">
-            <p class="article_2">Управление</p>
-            {% if basket %}
+        </select>
+    </div>
+    <button type="submit">Купить</button>
+</form>
 
-            <p class="article_5">Общая сумма: {{ totalSum }}</p>
-            <div>
-                <form method="post">
-                    <input name="clearBasket" type="hidden" value=0>
-                    <button class="clear cell" type="submit">Очистить корзину</button>
-                </form>
-            </div>
-            <div>
-                <form method="post">
-                    <input name="buy" type="hidden" value=0>
-                    <div class="article_5">
-                        <select name="customerId" class="select_basket" required>
-                            {% for customer in customerNames %}
-                                <option value="{{ customer['idCustomer'] }}">{{ customer['Name'] }}</option>
-                            {% endfor %}
-                        </select>
-                    </div>
-                    <button class="clear cell" type="submit">Купить</button>
-                </form>
-            </div>
-            {% else %}
-                <p class="article_2">Нет действий</p>
-            {% endif %}
-        </div>
-    </div>
-    <p></p>
-    <div class="div_like_button_1">
-        <a class="a_yellow" href="{{ url_for('Index') }}">Вернуться</a>
-    </div>
+<div class="div_like_button_1">
+    <a class="a_yellow" href="{{ url_for('Index') }}">Вернуться в главное меню</a>
+</div>
 </body>
 </html>
