--- a/5 Term/Data Bases coursework/src/basket/templates/basketResult.html
+++ b/5 Term/Data Bases coursework/src/basket/templates/basketResult.html
@@ -14,11 +14,11 @@
 		<script>
             window.setTimeout(function()
             {
-            window.location.href = {{redirect}};
+            window.location.href = "../";
             }, 3000);
         </script>
         <div class="div_like_button_1">
-			<a href="{{ url_for('basket.basket_index') }}" class="a_yellow">Вернуться</a>
+			<a href="{{ url_for('basket.basketIndex') }}" class="a_yellow">Вернуться</a>
 		</div>
 	</body>
 </html>
